feat(tools): SSRF allowlist for Docker inter-container networking (#146)
* feat(tools): add SSRF allowlist for Docker inter-container networking

Add `tools.web.fetch.ssrf_allowlist` config field to exempt trusted CIDR
ranges from SSRF blocking. This enables Docker sibling containers (e.g.
`172.22.0.0/16`) to communicate while keeping the default fully secure
(empty allowlist = all private IPs blocked).

Closes #141

* style(gateway): fix rustfmt line-length violations in chat.rs and methods.rs

* docs(config): add ssrf_allowlist example to default config template

* chore: sync Cargo.lock after merge

* test(gateway-ui): update cron e2e routes to settings paths

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ metrics-exporter-prometheus = "0.16"
 metrics-tracing-context     = "0.16"
 # Content processing
 image          = { default-features = false, features = ["jpeg", "png", "webp"], version = "0.25" }
+ipnet          = "2"
 pulldown-cmark = { default-features = false, version = "0.12" }
 # Filesystem / archiving
 chrono                = "0.4"
