--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 anyhow         = { workspace = true }
 chrono-tz      = { workspace = true }
 directories    = { workspace = true }
+ipnet          = { workspace = true }
 moltis-metrics = { optional = true, workspace = true }
 secrecy        = { workspace = true }
 serde          = { workspace = true }
