--- a/crates/tools/Cargo.toml
+++ b/crates/tools/Cargo.toml
@@ -13,6 +13,7 @@ async-trait     = { workspace = true }
 base64          = { workspace = true }
 futures         = { workspace = true }
 image           = { workspace = true }
+ipnet           = { workspace = true }
 moltis-agents   = { workspace = true }
 moltis-browser  = { workspace = true }
 moltis-common   = { workspace = true }
